@@ -16,8 +16,8 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
+import java.net.MalformedURLException;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -33,8 +33,8 @@ class ShapeTreeParsingTests {
         DocumentLoaderManager.setLoader(httpExternalDocumentLoader);
     }
 
-    protected URI getURI(MockWebServer server, String path) throws URISyntaxException {
-        return new URI(server.url(path).toString());
+    protected URL getURL(MockWebServer server, String path) throws MalformedURLException {
+        return new URL(server.url(path).toString());
     }
 
     @BeforeAll
@@ -62,13 +62,13 @@ class ShapeTreeParsingTests {
     void parseShapeTreeReuse() {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
-        ShapeTree projectShapeTree1 = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree#ProjectTree"));
+        ShapeTree projectShapeTree1 = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree#ProjectTree"));
         Assertions.assertNotNull(projectShapeTree1);
-        ShapeTree projectShapeTree2 = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree#ProjectTree"));
+        ShapeTree projectShapeTree2 = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree#ProjectTree"));
         Assertions.assertNotNull(projectShapeTree2);
         assertEquals(projectShapeTree1.hashCode(), projectShapeTree2.hashCode());
         // The "business" shape tree won't be in the cache, but it cross-contains pm:MilestoneTree, which should be.
-        ShapeTree businessShapeTree = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/business/shapetree#BusinessTree"));
+        ShapeTree businessShapeTree = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/business/shapetree#BusinessTree"));
         Assertions.assertNotNull(businessShapeTree);
     }
 
@@ -79,15 +79,15 @@ class ShapeTreeParsingTests {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
         // Retrieve the MilestoneTree shapetree (which is referred to by the ProjectTree shapetree)
-        ShapeTree milestoneShapeTree1 = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-virtual#MilestoneTree"));
+        ShapeTree milestoneShapeTree1 = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-virtual#MilestoneTree"));
         Assertions.assertNotNull(milestoneShapeTree1);
 
         // Retrieve the ProjectTree shapetree which will recursively cache the MilestoneTree shapetree
-        ShapeTree projectShapeTree1 = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
+        ShapeTree projectShapeTree1 = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
         Assertions.assertNotNull(projectShapeTree1);
 
         // Retrieve the MilestoneTree shapetree again, ensuring the same instance is used
-        ShapeTree milestoneShapeTree2 = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-virtual#MilestoneTree"));
+        ShapeTree milestoneShapeTree2 = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-virtual#MilestoneTree"));
         Assertions.assertNotNull(milestoneShapeTree2);
 
         assertEquals(milestoneShapeTree1.hashCode(), milestoneShapeTree2.hashCode());
@@ -100,7 +100,7 @@ class ShapeTreeParsingTests {
     void parseShapeTreeReferences() {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
-        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
+        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
         Assertions.assertNotNull(projectShapeTree);
         assertFalse(projectShapeTree.getReferences().isEmpty());
     }
@@ -111,9 +111,9 @@ class ShapeTreeParsingTests {
     void parseShapeTreeContains() {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
-        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree#ProjectTree"));
+        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree#ProjectTree"));
         Assertions.assertNotNull(projectShapeTree);
-        assertTrue(projectShapeTree.getContains().contains(getURI(server,"/static/shapetrees/project/shapetree#MilestoneTree")));
+        assertTrue(projectShapeTree.getContains().contains(getURL(server,"/static/shapetrees/project/shapetree#MilestoneTree")));
     }
 
     /* TODO - This test currently fails due to cross-resource parsing.
@@ -123,11 +123,11 @@ class ShapeTreeParsingTests {
     void parseShapeTreeContainsReservedTypes() {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
-        ShapeTree reservedShapeTree = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/reserved/shapetree#EverythingTree"));
+        ShapeTree reservedShapeTree = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/reserved/shapetree#EverythingTree"));
         Assertions.assertNotNull(reservedShapeTree);
-        assertTrue(reservedShapeTree.getContains().contains(getURI(server,"http://www.w3.org/ns/shapetrees#ResourceTree")));
-        assertTrue(reservedShapeTree.getContains().contains(getURI(server,"http://www.w3.org/ns/shapetrees#NonRDFResourceTree")));
-        assertTrue(reservedShapeTree.getContains().contains(getURI(server,"https://www.w3.org/ns/shapetrees#ContainerTree")));
+        assertTrue(reservedShapeTree.getContains().contains(getURL(server,"http://www.w3.org/ns/shapetrees#ResourceTree")));
+        assertTrue(reservedShapeTree.getContains().contains(getURL(server,"http://www.w3.org/ns/shapetrees#NonRDFResourceTree")));
+        assertTrue(reservedShapeTree.getContains().contains(getURL(server,"https://www.w3.org/ns/shapetrees#ContainerTree")));
     }
      */
 
@@ -137,7 +137,7 @@ class ShapeTreeParsingTests {
     void testTraverseReferences() {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
-        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
+        ShapeTree projectShapeTree = ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-virtual#ProjectTree"));
         projectShapeTree.getReferencedShapeTrees();
         Assertions.assertTrue(projectShapeTree.getReferencedShapeTrees(RecursionMethods.BREADTH_FIRST).hasNext());
         Assertions.assertTrue(projectShapeTree.getReferencedShapeTrees(RecursionMethods.DEPTH_FIRST).hasNext());
@@ -150,7 +150,7 @@ class ShapeTreeParsingTests {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
         Assertions.assertThrows(ShapeTreeException.class, () ->
-            ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/invalid/missing-expects-type#DataRepositoryTree"))
+            ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/invalid/missing-expects-type#DataRepositoryTree"))
         );
     }
 
@@ -161,10 +161,10 @@ class ShapeTreeParsingTests {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
         Assertions.assertThrows(ShapeTreeException.class, () ->
-                ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/invalid/contains-with-bad-expects-type#DataRepositoryTree"))
+                ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/invalid/contains-with-bad-expects-type#DataRepositoryTree"))
         );
         Assertions.assertThrows(ShapeTreeException.class, () ->
-                ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/invalid/contains-with-nonrdf-expects-type#DataRepositoryTree"))
+                ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/invalid/contains-with-nonrdf-expects-type#DataRepositoryTree"))
         );
     }
 
@@ -175,7 +175,7 @@ class ShapeTreeParsingTests {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
         Assertions.assertThrows(ShapeTreeException.class, () ->
-                ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/invalid/bad-object-type#DataRepositoryTree"))
+                ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/invalid/bad-object-type#DataRepositoryTree"))
         );
     }
 
@@ -186,7 +186,7 @@ class ShapeTreeParsingTests {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
         Assertions.assertThrows(ShapeTreeException.class, () ->
-                ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/invalid/shapetree-missing#missing"))
+                ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/invalid/shapetree-missing#missing"))
         );
     }
 
@@ -196,7 +196,7 @@ class ShapeTreeParsingTests {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
         Assertions.assertThrows(ShapeTreeException.class, () ->
-                ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/project/shapetree-bad-content-type#bad"))
+                ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/project/shapetree-bad-content-type#bad"))
         );
     }
 
@@ -207,7 +207,7 @@ class ShapeTreeParsingTests {
         MockWebServer server = new MockWebServer();
         server.setDispatcher(dispatcher);
         Assertions.assertThrows(ShapeTreeException.class, () ->
-            ShapeTreeFactory.getShapeTree(getURI(server,"/static/shapetrees/invalid/shapetree-invalid-contains-objects#DataRepositoryTree"))
+            ShapeTreeFactory.getShapeTree(getURL(server,"/static/shapetrees/invalid/shapetree-invalid-contains-objects#DataRepositoryTree"))
         );
     }
 
